// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. no child elements 1`] = `<div />`;

exports[`2. a single child element 1`] = `
<div>
  <div
    dir="auto"
  >
    standard-1
  </div>
</div>
`;

exports[`3. ten child elements 1`] = `
<div>
  <div>
    <div>
      <div>
        <div />
        <div />
      </div>
    </div>
    <div>
      <div>
        <div
          dir="auto"
        >
          standard-1
        </div>
        <div />
      </div>
    </div>
    <div>
      <div>
        <div
          dir="auto"
        >
          standard-2
        </div>
        <div />
      </div>
    </div>
    <div>
      <div>
        <div
          dir="auto"
        >
          standard-3
        </div>
        <div />
      </div>
    </div>
    <div>
      <div>
        <div
          dir="auto"
        >
          standard-4
        </div>
        <div />
      </div>
    </div>
  </div>
</div>
`;
